--- a/Snake-SFML/Snake-SFML.vcxproj.filters
+++ b/Snake-SFML/Snake-SFML.vcxproj.filters
@@ -1,262 +1,179 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Fichiers de ressources">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Ressources">
+      <UniqueIdentifier>{32b09922-b025-49a7-859a-ba136f5a75ca}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source">
-      <UniqueIdentifier>{0f882b72-d8c3-44c8-8549-d5e264bd3aad}</UniqueIdentifier>
+    <Filter Include="Includes">
+      <UniqueIdentifier>{b914cce1-c591-4582-88fa-2afba916fb9f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Include">
-      <UniqueIdentifier>{00e1a95a-76ed-41dc-8a0c-700af00f2d5b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers de ressources\Fonts">
-      <UniqueIdentifier>{88d7e28d-c7df-4eb0-aa3c-facd55fc8bf5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers de ressources\Textures">
-      <UniqueIdentifier>{c1e03fbb-5c7e-48b0-ba0c-f8ec126a5280}</UniqueIdentifier>
+    <Filter Include="Sources">
+      <UniqueIdentifier>{c7c4020a-20ad-46ca-92f7-8bb056718ac6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Ressources\Textures\ButtonNormal.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\ButtonPressed.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\ButtonSelected.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\Desert.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\Eagle.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\Raptor.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\TitleScreen.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\Apple.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\background.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeBodyHori.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeHeadDown.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeHeadLeft.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeHeadRight.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeHeadUp.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeTailRight.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeTailDown.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeTailLeft.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeTailUp.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeBodyBottomLeft.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeBodyBottomRight.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeBodyTopLeft.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeBodyTopRight.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
-    <Image Include="Ressources\Textures\SnakeBodyVerti.png">
-      <Filter>Fichiers de ressources\Textures</Filter>
-    </Image>
+    <ClCompile Include="Sources\Application.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Bonus.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Button.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Command.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\CommandQueue.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Component.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Container.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Entity.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\GameOverState.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\GameState.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Label.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Main.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\MenuState.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\PauseState.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Player.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\SceneNode.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\SettingsState.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Snake.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\SpriteNode.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\State.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\StateStack.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\TitleState.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Utility.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\World.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Font Include="Ressource\Font\arial.ttf">
-      <Filter>Fichiers de ressources\Fonts</Filter>
-    </Font>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Include\Application.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Application.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Button.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Bonus.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Category.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Button.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Command.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Category.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\CommandQueue.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Command.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Component.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\CommandQueue.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Container.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Component.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Entity.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Container.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\GameState.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Entity.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Label.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\GameOverState.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\MenuState.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\GameState.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\PauseState.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Label.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Player.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\MenuState.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\ResourceHolder.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\PauseState.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\ResourceIdentifiers.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Player.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\SceneNode.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\ResourceHolder.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\SettingsState.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\ResourceIdentifiers.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\SpriteNode.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\SceneNode.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\State.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\SettingsState.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\StateIdentifiers.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Snake.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\StateStack.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\SpriteNode.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\TitleState.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\State.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Utility.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\StateIdentifiers.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\World.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\StateStack.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Snake.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\TitleState.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Bonus.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\Utility.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\GameOverState.hpp">
-      <Filter>Include</Filter>
+    <ClInclude Include="Includes\World.hpp">
+      <Filter>Includes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Include\ResourceHolder.inl">
-      <Filter>Include</Filter>
+    <None Include="Includes\ResourceHolder.inl">
+      <Filter>Includes</Filter>
     </None>
-    <None Include="Include\Utility.inl">
-      <Filter>Include</Filter>
+    <None Include="Includes\Utility.inl">
+      <Filter>Includes</Filter>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Source\Application.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Button.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Command.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\CommandQueue.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Component.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Container.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Entity.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\GameState.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Label.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Main.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\MenuState.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\PauseState.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Player.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\SceneNode.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\SettingsState.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\SpriteNode.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\State.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\StateStack.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\TitleState.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Utility.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\World.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Snake.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Bonus.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\GameOverState.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
   </ItemGroup>
 </Project>
